Fix horizontal scroll position not persisting

--- a/src/components/Viewer/viewer.scss
+++ b/src/components/Viewer/viewer.scss
@@ -161,10 +161,6 @@
     color: transparent;
     background-color: var(--color-primary);
   }
-
-  @media (hover: none) {
-    overflow: auto;
-  }
 }
 
 .viewer-page {
